<resources>
    <string name="app_name">HSD</string>
    <string name="btn_signin">SIGN IN</string>
    <string name="btn_join">SIGN UP</string>
    <string name="btn_forgot">FORGOT PASSWORD</string>
    <string name="btn_signup">Don\'t have account ? CLICK HERE</string>
    <string name="btn_haveaccount">Already have account ?</string>
    <string name="txt_phone">PHONE NUMBER</string>
    <string name="txt_password">PASSWORD</string>
    <string name="txt_repassword">RE - PASSWORD</string>
    <string name="txt_or">Or</string>
    <string name="facebook_app_id">171986543489907</string>
    <string name="menu_home">Home</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_profile">Profile</string>
    <string name="login_google">Log in with Google</string>
    <string name="not_null_case">Dont be empty this box!</string>
    <string name="phone_unvailable">Invalid phone number! Please try again!</string>
    <string name="input_infomation_valid">Please enter valid information!</string>
    <string name="not_connect_to_server">Don\'t connect to server, please check again!</string>
    <string name="complete">% complete</string>
    <string name="processing">Waiting…</string>
    <string name="phone_or_pass_not_avali">Invalid phone number or password!</string>
    <string name="user_not_register">Account not register!</string>
    <string name="pass_wrong">Wrong password!</string>
    <string name="loading">Loading…</string>
    <string name="expiredtime_notifi">Wrong password!</string>
    <string name="days_left">DAYS LEFT</string>
    <string name="status_count_product_1">You have </string>
    <string name="status_count_product_2"> product(s) about to expire. Please check you inventory</string>
    <string name="wellcome_hsd">Welcome to app HSD</string>
    <string name="noti_create">Create products to receive notification!</string>
    <string name="wellcome">Welcome!</string>
    <string name="will_epritedtime">will expire in</string>
    <string name="hsd_account">HSD Account</string>
    <string name="choose_an_item">Choose an item</string>
    <string name="you_want_logout">Do you want log out?</string>
    <string name="feedback">Feedback for HanSuDung App</string>
    <string name="share_app_invite">I want invite you to with me on HSD. Please click the link to download. </string>
    <string name="detail_product_text_expiry_date">Remaining term of use </string>
    <string name="detail_product_text_day"> day(s).</string>
    <string name="no_name"> No Name</string>
    <string name="note">Note…</string>
    <string name="shelf_life">Shelf life is </string>
    <string name="overdue">overdue</string>
    <string name="overdue_status">Products overdue</string>
    <string name="notic_safe">for safety you should remove it</string>
    <string name="today">to day</string>
    <string name="where_is_expire">Where is date of manufacture?</string>
    <string name="where_is_expired_time">Where is expired time?</string>
    <string name="detail_product">Detail product</string>
    <string name="choose_time">Notification setting</string>
    <string name="alarm_setting">Alarm setting</string>
    <string name="warning">Warning</string>
    <string name="descrip_delete">Would you like to delete product?</string>
    <string name="nsx">DOM</string>
    <string name="hsd">ExT</string>
    <string name="scan_hsd">Scan barcode</string>
    <string name="barcode_not_right">Barcode not true</string>
    <string name="add_product">Add Product</string>
    <string name="expiry_date">Expiry Date…</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="post">POST PRODUCT</string>
    <string name="title_delete"> Delete Product</string>
    <string name="title_choose_days_before">Choose days before</string>
    <string name="descrip_choose_days">Receive one notification before expiry date</string>
    <string name="not_allow_permission">If you reject permission,you can not use this service ;br /&gt; Please turn on permissions ;br /&gt; at [Setting] > [Permission]</string>
    <string name="days">day(s)</string>
    <string name="one_day"> One day</string>
    <string name="three_day"> Three day</string>
    <string name="one_week"> One week</string>
    <string name="one_month">One month</string>
    <string name="custome_day">Custom days</string>
    <string name="day_advance_notice">  advance notice</string>
    <string name="recieve_one_notification">Receive one notification before expiry date</string>
    <string name="change_avatar">Change image…</string>
    <string name="uploading">Uploading</string>
    <string name="remain_time_minute">Remain time minute</string>
    <string name="remain_time_second">Remain time second</string>
    <string name="upload_sucessfully">Upload successfully!</string>
    <string name="no_image">No Image</string>
    <string name="not_create_image">Not create image</string>
    <string name="not_gallery"> Not gallery</string>
    <string name="no_camera">No camera</string>
    <string name="select_max_count">Already %1$d images selected</string>
    <string name="select_min_count">You have to choice %1$d images</string>
    <string name="done">Done</string>
    <string name="choose_image">Choose image</string>
    <string name="edit">Edit</string>
    <string name="delete_sucess"> Delete success!</string>
    <string name="watched_all">watched all!</string>
    <string name="cancel">Cancel</string>
    <string name="just_now">just now</string>
    <string name="a_min_ago">1 min ago</string>
    <string name="mins_ago">mins ago</string>
    <string name="a_hour_ago">a hour ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">day ago</string>
    <string name="week_ago">week ago</string>
    <string name="weeks_ago">weeks ago</string>
    <string name="_0_50">/free</string>
    <string name="change_password">Change password</string>
    <string name="version">Version</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="information">Information</string>
    <string name="share_app">Share app</string>
    <string name="ca_si_chipici">Ca si Chipici</string>
    <string name="_012234567987">HSD Account</string>
    <string name="sound">Sound</string>
    <string name="account_setting">Account Setting</string>
    <string name="support">Support</string>
    <string name="other_setting">Other Setting</string>
    <string name="title_activity_settings">Settings</string>
    <string name="rest">REST</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="not_in_use">Not in use</string>
    <string name="action_settings">Settings</string>
    <string name="set_alarm">Set Alarm!</string>
    <string name="off_alarm">off Alarm</string>
    <string name="title_activity_alarm_setting">Alarm Setting</string>
    <string name="notification">Notification</string>
    <string name="save">SAVE</string>
    <string name="time_setting">Time Setting</string>
    <string name="expiry_date_notification">Expiry Date Notification</string>
    <string name="_1_am">1 AM</string>
    <string name="product">Product</string>
    <string name="ok">OK</string>
    <string name="rateApp">Rate app on PlayStore</string>
    <string name="sound_notification">Sound Notification</string>
    <string name="title_share">Complete action using</string>
    <string name="person_share">Sharer : </string>
    <string name="name_share">Poster : </string>
    <string name="status">Title : </string>
    <string name="description">Description : </string>
    <string name="date_share">Time : </string>
    <string name="where_share">Place : </string>
    <string name="not_data_found">No data found</string>
    <string name="link">See more at : </string>
    <string name="send_feedback">Send Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share">Share</string>
    <string name="faqs">FAQs</string>
    <string name="notification_expiry"> expired notification</string>
    <string name="expiry_and">expired and </string>
    <string name="product_expiry">product :</string>
    <string name="con">still</string>
    <string name="clear_sucess">Success</string>
    <string name="product_was_deleted">Product was deleted</string>
    <string name="day">day.</string>
    <string name="_5">5</string>
    <string name="export_to_excel">Export to Excel</string>
    <string name="home_expired">Expired</string>
    <string name="home_warning">Near expiration</string>
    <string name="home_protected">Safe</string>
    <string name="border_expired">EXPIRED</string>
    <string name="border_protected">DAYS</string>
     <string name="accepte_delete">OK</string>
    <string name="cancel_delete">Cancel</string>
    <string name="deleting">deleting…</string>
    <string name="clear">Clear All</string>
</resources>