<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AlarmSetting"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/notification" />

        <FrameLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch

                android:id="@+id/switch_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/sound_notification"
                android:textStyle="bold" />
        </FrameLayout>

        <TextView
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/time_setting" />
        <ListView
            android:id="@+id/list_SoundSetting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="NestedScrolling">
        </ListView>
    </LinearLayout>
    <Button
        android:id="@+id/btn_save_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/save" />

</FrameLayout>

