<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_hint">
    <ScrollView
        android:scrollbars="none"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_margin="16dp"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:id="@+id/imageView1"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_avatar"
            />

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="200dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/phone_user"
                android:textColor="@color/text_color"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ca_si_chipici"
                tools:ignore="SpUsage" />
            <TextView
                android:id="@+id/tv_type"
                android:textSize="14dp"
                android:textColor="@color/text_hint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_012234567987" />

        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/log_out"
                android:scaleType="fitXY"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_logout"/>
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:textSize="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:text="@string/account_setting"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginLeft="10dp" />
        <!--<LinearLayout-->
            <!--android:paddingLeft="12dp"-->
            <!--android:gravity="center|left"-->
            <!--android:background="@color/white"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="40dp"-->
            <!--tools:ignore="UseCompoundDrawables">-->
            <!--<ImageView-->
                <!--android:background="@drawable/ic_product"-->
                <!--android:layout_width="25dp"-->
                <!--android:layout_height="25dp"-->
                <!--tools:ignore="ContentDescription" />-->
            <!--<TextView-->
                <!--android:textColor="@color/text_color"-->
                <!--android:layout_marginLeft="12dp"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/change_password"-->
                <!--android:layout_marginStart="10dp" />-->

        <!--</LinearLayout>-->

    <LinearLayout
        android:layout_marginTop="2dp"
        android:paddingLeft="12dp"
        android:gravity="center|left"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView
            android:background="@drawable/ic_product"
            android:layout_width="25dp"
            android:layout_height="25dp"
            tools:ignore="ContentDescription" />
        <TextView
            android:textColor="@color/text_color"
            android:layout_marginStart="12dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:layout_marginLeft="10dp" />
        <TextView
            android:id="@+id/txt_numberProduct"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:text="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_gravity="center_vertical"
            android:text="@string/_0_50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
        <TextView
            android:textSize="12dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/other_setting"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp" />

    <FrameLayout

        android:background="@drawable/back_ground_click"
        android:id="@+id/txt_Expiry"
        android:paddingLeft="12dp"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView
            android:layout_gravity="center|left"
            android:background="@drawable/ic_product"
            android:layout_width="25dp"
            android:layout_height="25dp"
            tools:ignore="ContentDescription" />


        <TextView
            android:textColor="@color/text_color"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expiry_date_notification"
            android:layout_marginLeft="40dp" />


        <TextView
            android:textColor="@color/text_color"
            android:layout_marginEnd="10dp"
            android:gravity="end"
            android:id="@+id/txt_viewExpiry"
            android:text="@string/not_in_use"
            android:layout_marginStart="10dp"
            android:layout_gravity="end|center_vertical"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />
    </FrameLayout>


    <FrameLayout

        android:background="@drawable/back_ground_click"
        android:id="@+id/txt_sound"
        android:layout_marginTop="2dp"
        android:paddingLeft="12dp"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView
            android:layout_gravity="center|left"
            android:background="@drawable/ic_product"
            android:layout_width="25dp"
            android:layout_height="25dp"
            tools:ignore="ContentDescription" />


        <TextView
            android:textColor="@color/text_color"
            android:layout_marginLeft="40dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound" />

        <TextView
            android:textColor="@color/text_color"
            android:id="@+id/txt_ViewSound"
            android:layout_marginEnd="10dp"
            android:text="@string/not_in_use"
            android:gravity="end"
            android:layout_marginStart="10dp"
            android:layout_gravity="end|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />

    </FrameLayout>

    <TextView
        android:textSize="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:text="@string/support"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginLeft="10dp" />
        <!--<LinearLayout-->
            <!--android:id="@+id/txt_FAQs"-->
            <!--android:background="@drawable/back_ground_click"-->
            <!--android:paddingLeft="12dp"-->
            <!--android:gravity="center|left"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="40dp"-->
            <!--tools:ignore="UseCompoundDrawables">-->
            <!--<ImageView-->
                <!--android:background="@drawable/ic_product"-->
                <!--android:layout_width="25dp"-->
                <!--android:layout_height="25dp"-->
                <!--tools:ignore="ContentDescription" />-->
            <!--<TextView-->

                <!--android:textColor="@color/text_color"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/faqs"-->
                <!--android:layout_marginStart="10dp" />-->
        <!--</LinearLayout>-->
        <LinearLayout
            android:id="@+id/txt_share"
            android:layout_marginTop="2dp"
            android:paddingLeft="12dp"
            android:gravity="center|left"
            android:background="@drawable/back_ground_click"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:background="@drawable/ic_product"
                android:layout_width="25dp"
                android:layout_height="25dp"
                tools:ignore="ContentDescription" />
            <TextView
                android:textColor="@color/text_color"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_marginTop="2dp"-->
            <!--android:paddingLeft="12dp"-->
            <!--android:gravity="center|left"-->
            <!--android:background="@drawable/back_ground_click"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="40dp"-->
            <!--tools:ignore="UseCompoundDrawables">-->
            <!--<ImageView-->
                <!--android:background="@drawable/ic_product"-->
                <!--android:layout_width="25dp"-->
                <!--android:layout_height="25dp"-->
                <!--tools:ignore="ContentDescription" />-->

            <!--<TextView-->
                <!--android:textColor="@color/text_color"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/privacy_policy"-->
                <!--android:layout_marginStart="10dp" />-->
        <!--</LinearLayout>-->

        <LinearLayout
            android:background="@drawable/back_ground_click"
            android:id="@+id/send_feedback"
            android:textColor="@color/text_color"
            android:layout_marginTop="2dp"
            android:paddingLeft="12dp"
            android:gravity="center|left"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:background="@drawable/ic_product"
                android:layout_width="25dp"
                android:layout_height="25dp"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_feedback"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rateApp"
            android:background="@drawable/back_ground_click"
            android:textColor="@color/text_color"
            android:layout_marginTop="2dp"
            android:paddingLeft="12dp"
            android:gravity="center|left"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:background="@drawable/ic_product"
                android:layout_width="25dp"
                android:layout_height="25dp"
                tools:ignore="ContentDescription" />
            <TextView

                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rateApp"
                android:layout_marginStart="10dp" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
           />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/_1_0_0" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>