<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AlarmSetting"
    android:orientation="vertical"
    android:background="@color/bg_hint">
    <FrameLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:layout_alignParentTop="true"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_signup"
            tools:ignore="MissingConstraints" />

        <Button
            android:textColor="@color/white"
            android:background="@drawable/ic_tranparent"
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center|right"
            android:text="@string/save" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/text_hint"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/notification" />

        <FrameLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <Switch
                android:id="@+id/switch_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right" />

            <TextView
                android:textColor="@color/text_color"
                android:textSize="14dp"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/notification" />
        </FrameLayout>

        <TextView
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/time_setting" />

        <ListView
            android:overScrollMode="never"
            android:scrollbars="none"
            android:background="@color/white"
            android:id="@+id/list_TimeSetting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="NestedScrolling">
        </ListView>


    </LinearLayout>





</LinearLayout>
